# kreuzberg

./: .clang-format  .gitignore  .gitmodules  .lychee.toml  .pre-commit-config.yaml  .textlintrc.json  .typos.toml  ATTRIBUTION.md  ATTRIBUTIONS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPRECATION_INDEX.md  DEPRECATION_README.md  FINAL_PERFORMANCE_REPORT.md  IMPLEMENTATION_SESSION_6.md  Package.swift  README.md  TODO.md  Taskfile.yaml  Taskfile.yml  VALIDATION_REPORT.md  VALIDATION_SUMMARY.txt  ai-rulez.yaml  alef.toml  alef.toml.minimal  benchmark_results.json  biome.json  composer.json  cycle-5-alef-queue.md  deny.toml  go.work  mkdocs.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  run_benchmarks.py  rust-toolchain.toml  rustfmt.toml  (+2 more)
benchmarks/: README.md  benchmark_baseline.py  end_to_end_benchmark.py  final_benchmark.py  pyproject.toml  serialization_benchmark.py  statistical_benchmark.py
benchmarks/results/: baseline_results.json  benchmark_msgpack_20250702_003800.json  comprehensive_caching_results.json  final_benchmark_results.json  mime_caching_results.json  msgspec_caching_results.json  ocr_caching_results.json  serialization_benchmark_results.json  statistical_benchmark_results.json  table_caching_results.json
benchmarks/src/: benchmarks.py  cli.py  extractors.py  models.py  profiler.py  runner.py
benchmarks/src/kreuzberg_benchmarks/: benchmarks.py  cli.py  models.py  profiler.py  runner.py
crates/kreuzberg/: Cargo.toml  README.md  build.rs
crates/kreuzberg-cli/: Cargo.toml  README.md
crates/kreuzberg-cli/src/: logging.rs  main.rs  output.rs  style.rs
crates/kreuzberg-cli/tests/: commands_test.rs  config_discovery_test.rs  config_tests.rs  e2e_config_test.rs  extract_envelope.rs  server_test.rs
crates/kreuzberg-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml  kreuzberg-ffi-install.pc  kreuzberg-ffi.pc  kreuzberg.h
crates/kreuzberg-ffi/benches/: result_view_benchmark.rs
crates/kreuzberg-ffi/cmake/: kreuzberg-ffi-config-version.cmake  kreuzberg-ffi-config.cmake
crates/kreuzberg-ffi/include/: kreuzberg.h
crates/kreuzberg-ffi/src/: batch_streaming.rs  config_builder.rs  error.rs  helpers.rs  lib.rs  memory.rs  result.rs  result_pool.rs  result_view.rs  string_intern.rs  types.rs
crates/kreuzberg-ffi/tests/: plugin_registration_tests.rs
crates/kreuzberg-ffi/tests.disabled/: README.md
crates/kreuzberg-node/: .npmignore  Cargo.toml  README.md  format-metadata-wrapper.js  index.d.ts  metadata.d.ts  package.json  vitest.config.ts
crates/kreuzberg-node/artifacts/: index.d.ts  index.js
crates/kreuzberg-node/examples/: async-patterns.ts
crates/kreuzberg-node/src/: lib.rs  result.rs  validation.rs  worker_pool.rs  worker_pool_api.rs
crates/kreuzberg-node/typescript/: index.ts  types.ts
crates/kreuzberg-paddle-ocr/: Cargo.toml
crates/kreuzberg-paddle-ocr/src/: angle_net.rs  base_net.rs  crnn_net.rs  db_net.rs
crates/kreuzberg-paddle-ocr/tests/: diagnostic.rs
crates/kreuzberg-pdfium-render/: Cargo.toml  build.rs
crates/kreuzberg-pdfium-render/src/: bindings.rs  lib.rs  pdfium.rs  utils.rs
crates/kreuzberg-php/: Cargo.toml
crates/kreuzberg-php/src/: async_extraction.rs  deferred.rs  extraction.rs  lib.rs  types.rs
crates/kreuzberg-py/: Cargo.toml  README.md
crates/kreuzberg-py/benches/: async_patterns_benchmark.py
crates/kreuzberg-py/src/: config.rs  conversion.rs  core.rs  error.rs  ffi.rs  keywords.rs  lib.rs  plugins.rs  pyproject.toml  types.rs
crates/kreuzberg-tesseract/: .commitlintrc.json  CHANGELOG.md  Cargo.toml  ai-rulez.yaml  build.rs
crates/kreuzberg-tesseract/src/: lib.rs
crates/kreuzberg-tesseract/tests/: integration_test.rs
crates/kreuzberg-wasm/: Cargo.toml  README.md  package.json  tsup.config.ts
crates/kreuzberg-wasm/scripts/: copy-pkg.js  fix-type-exports.js
crates/kreuzberg-wasm/src/: extraction.rs  lib.rs
crates/kreuzberg-wasm/typescript/: batch-operations.spec.ts  embeddings.spec.ts  index.ts  keywords.spec.ts  pages.spec.ts  plugin-registration.spec.ts  plugin-registry.ts  tables.spec.ts  types.ts
crates/kreuzberg/benches/: otel_overhead.rs
crates/kreuzberg/examples/: download_paddle_models.rs
crates/kreuzberg/src/: cache_dir.rs  cancellation.rs  doc_orientation.rs  embeddings.rs  error.rs  lib.rs  model_cache.rs  model_download.rs  ort_discovery.rs  panic_context.rs  table_core.rs  types.rs
crates/kreuzberg/tests/: api_chunk.rs  api_consistency.rs  api_embed.rs  api_extract_multipart.rs  api_large_pdf_extraction.rs  api_large_pdf_extraction_diagnostics.rs  api_logging.rs  api_openweb.rs  api_tests.rs  archive_integration.rs  batch_orchestration.rs  batch_pooling_benchmark.rs  batch_processing.rs  bibtex_parity_test.rs  chunking_offset_demo.rs  concurrency_stress.rs  config_behavioral.rs  config_features.rs  config_integration_test.rs  config_loading_tests.rs  core_integration.rs  csv_integration.rs  docbook_extractor_tests.rs  document_structure_tests.rs  docx_metadata_extraction_test.rs  docx_mime_detection_test.rs  docx_ocr_integration_test.rs  docx_vs_pandoc_comparison.rs  email_integration.rs  epub_markdown_headings_tests.rs  epub_native_extractor_tests.rs  epub_spine_semantics_tests.rs  error_handling.rs  extraction_timeout_tests.rs  fictionbook_extractor_tests.rs  format_integration.rs  gpu_acceleration.rs  html_table_test.rs  image_classification.rs  image_integration.rs  (+53 more)
e2e/python/: conftest.py  conftest_patch.py  pyproject.toml
e2e/python/tests/: helpers.py  test_archive.py  test_async.py  test_batch.py  test_cache_operations.py  test_cache_ops.py  test_chunking.py  test_code.py  test_configuration.py  test_contract.py  test_detection.py  test_document.py  test_document_extractor_management.py  test_email.py  test_embed.py  test_embed_async_pending.py  test_embed_extra.py  test_ocr.py  (+43 more)
examples/python/: basic.py  batch.py  custom_ocr.py  custom_postprocessor.py  ocr.py  pyproject.toml
tools/benchmark-harness/: Cargo.toml  README.md  SCHEMA.md  build.rs  guardrails.json
tools/e2e-generator/: Cargo.toml
v3/: README.md  pyproject.toml
(+3890 files in other folders)
