[workspace]
members = [
    "crates/kreuzberg",
    "crates/kreuzberg-py",
    "crates/kreuzberg-php",
    "crates/kreuzberg-ffi",
    "crates/kreuzberg-tesseract",
    "crates/kreuzberg-paddle-ocr",
    "crates/kreuzberg-cli",
    "crates/kreuzberg-node",
    "crates/kreuzberg-wasm",
    "packages/elixir/native/kreuzberg_rustler",
    "tools/benchmark-harness",
    "tools/e2e-generator",
    "e2e/rust",
]
exclude = ["tests/test_apps/rust", "tests/test_apps/elixir"]
default-members = ["crates/kreuzberg", "crates/kreuzberg-cli"]
resolver = "2"

[patch.crates-io]
kreuzberg = { path = "crates/kreuzberg" }
kreuzberg-tesseract = { path = "crates/kreuzberg-tesseract" }
kreuzberg-paddle-ocr = { path = "crates/kreuzberg-paddle-ocr" }

[workspace.package]
version = "4.2.15"
edition = "2024"
rust-version = "1.91"
authors = ["Na'aman Hirschfeld <nhirschfeld@gmail.com>"]
license = "MIT"
repository = "https://github.com/kreuzberg-dev/kreuzberg"
homepage = "https://kreuzberg.dev"

[workspace.lints.clippy]
collapsible_if = "allow"

[workspace.dependencies]
tokio = { version = "1.49.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "sync",
    "process",
    "fs",
    "time",
    "io-util",
] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
thiserror = "2.0.18"
anyhow = "1.0"
libc = "0.2.180"
async-trait = "0.1.89"
tracing = "0.1"
ahash = "0.8.12"
base64 = "0.22.1"
bytes = { version = "1", features = ["serde"] }
hex = "0.4.3"
num_cpus = "1.17.0"
once_cell = "1.21.3"
parking_lot = "0.12.5"
html-to-markdown-rs = { version = "2.24.5", default-features = false }
reqwest = { version = "0.13.2", default-features = false }
image = { version = "0.25.9", default-features = false }
clap = { version = "4.5", features = ["derive", "color", "suggestions"] }
toml = "0.9.11"
tempfile = "3.24.0"
criterion = { version = "0.8", features = ["html_reports"] }
lzma-rust2 = { version = "0.15.7" }
getrandom = { version = "0.3.4", features = ["wasm_js"] }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.release.package.kreuzberg-wasm]
opt-level = "z"
codegen-units = 1
