[workspace]
members = [
    "crates/kreuzberg",
    "crates/kreuzberg-py",
    "crates/kreuzberg-php",
    "crates/kreuzberg-ffi",
    "crates/kreuzberg-tesseract",
    "crates/kreuzberg-paddle-ocr",
    "crates/kreuzberg-pdfium-render",
    "crates/kreuzberg-cli",
    "crates/kreuzberg-node",
    "crates/kreuzberg-wasm",
    "packages/elixir/native/kreuzberg_rustler",
    "tools/benchmark-harness",
    "tools/e2e-generator",
    "tools/snippet-runner",
    "e2e/rust",
]
exclude = [
    "tests/test_apps/rust",
    "tests/test_apps/elixir",
    "packages/ruby/ext/kreuzberg_rb/native",
]
default-members = ["crates/kreuzberg", "crates/kreuzberg-cli"]
resolver = "2"

[patch.crates-io]
kreuzberg = { path = "crates/kreuzberg" }
kreuzberg-tesseract = { path = "crates/kreuzberg-tesseract" }
kreuzberg-paddle-ocr = { path = "crates/kreuzberg-paddle-ocr" }
kreuzberg-pdfium-render = { path = "crates/kreuzberg-pdfium-render" }

[workspace.package]
version = "4.4.6"
edition = "2024"
rust-version = "1.91"
authors = ["Na'aman Hirschfeld <nhirschfeld@gmail.com>"]
license = "MIT"
repository = "https://github.com/kreuzberg-dev/kreuzberg"
homepage = "https://kreuzberg.dev"

[workspace.dependencies]
kreuzberg = { path = "./crates/kreuzberg", version = "4.4.6", default-features = false }
kreuzberg-ffi = { path = "./crates/kreuzberg-ffi", version = "4.4.6" }

ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "api-18"] }
tokio = { version = "1.50.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "sync",
    "process",
    "fs",
    "time",
    "io-util",
] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
thiserror = "2.0.18"
anyhow = "1.0"
libc = "0.2.183"
async-trait = "0.1.89"
tracing = "0.1"
ahash = "0.8.12"
base64 = "0.22.1"
bytes = { version = "1", features = ["serde"] }
hex = "0.4.3"
num_cpus = "1.17.0"
once_cell = "1.21.4"
parking_lot = "0.12.5"
html-to-markdown-rs = { version = "2.28.2", default-features = false }
reqwest = { version = "0.13.2", default-features = false }
image = { version = "0.25.10", default-features = false }
clap = { version = "4.6", features = ["derive", "color", "suggestions"] }
toml = "1.0.6"
tempfile = "3.27.0"
criterion = { version = "0.8", features = ["html_reports"] }
lzma-rust2 = { version = "0.16.2" }
getrandom = { version = "0.4.2", features = ["wasm_js"] }
pdfium-render = { package = "kreuzberg-pdfium-render", path = "crates/kreuzberg-pdfium-render", version = "4.3" }
pdf_oxide = { version = "0.3.17", default-features = false }
log = "0.4"
wasm-bindgen = { version = "0.2", features = ["enable-interning"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Blob",
    "File",
    "FileReader",
    "console",
    "TextDecoder",
    "ImageData",
    "Window",
    "Response",
] }
console_error_panic_hook = "0.1"
ctor = "0.6"
lazy_static = "1.5.0"
rayon = "1.11.0"
dbase = "0.7"
hwpers = "0.5"
chrono = "0.4"
itertools = "0.14"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.profiling]
inherits = "release"
debug = true
strip = false

[profile.release.package.kreuzberg-wasm]
opt-level = "z"
codegen-units = 1
