[project]
name = "kreuzberg-benchmarks"
version = "0.1.0"
description = "Performance benchmarking suite for Kreuzberg text extraction library"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "kreuzberg",
  "matplotlib>=3.7",
  "memory-profiler>=0.61",
  "pandas>=2",
  "psutil>=5.9",
  "py-spy>=0.3.14",
  "rich>=13",
  "typer>=0.9",
]

scripts.kreuzberg-bench = "kreuzberg_benchmarks.cli:app"

[tool.ruff]
lint.extend-ignore = [ "ARG002", "B008", "B904", "BLE001", "E722", "PLR2004", "PYI036", "SLF001" ]

[tool.uv.sources]
kreuzberg = { workspace = true }
