[package]
name = "kreuzberg-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Command-line interface for Kreuzberg document intelligence"
license.workspace = true
repository.workspace = true
homepage = "https://kreuzberg.dev"
documentation = "https://docs.kreuzberg.dev"
keywords = ["document", "extraction", "cli", "tool", "parser"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
kreuzberg = { path = "../kreuzberg", version = "4.2.13", features = ["cli", "bundled-pdfium"] }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[features]
default = []
api = ["kreuzberg/api"]
mcp = ["kreuzberg/mcp"]
mcp-http = ["kreuzberg/mcp-http"]
embeddings = ["kreuzberg/embeddings"]
all = ["api", "mcp", "mcp-http", "embeddings"]

[[bin]]
name = "kreuzberg"
path = "src/main.rs"

[dev-dependencies]
ureq = { version = "3.2", features = ["json"] }
tempfile = { workspace = true }
