[package]
name = "kreuzberg-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Command-line interface for Kreuzberg document intelligence"
license.workspace = true
repository.workspace = true
homepage = "https://kreuzberg.dev"
documentation = "https://docs.kreuzberg.dev"
keywords = ["document", "extraction", "cli", "tool", "parser"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
kreuzberg = { workspace = true, features = ["formats", "tokio-runtime", "simd-utf8"] }

anstyle = "1"
clap = { workspace = true }
clap_complete = "4.5"
anyhow = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[features]
default = [
    "bundled-pdfium",
    "embeddings",
    "ocr",
    "paddle-ocr",
    "layout-detection",
    "chunking-tokenizers",
]

bundled-pdfium = ["kreuzberg/bundled-pdfium"]
static-pdfium = ["kreuzberg/static-pdfium"]

ocr = ["kreuzberg/ocr"]

api = ["kreuzberg/api"]
mcp = ["kreuzberg/mcp"]
mcp-http = ["kreuzberg/mcp-http"]
embeddings = ["kreuzberg/embeddings"]
paddle-ocr = ["kreuzberg/paddle-ocr"]
layout-detection = ["kreuzberg/layout-detection"]
chunking-tokenizers = ["kreuzberg/chunking-tokenizers"]
all = ["default", "api", "mcp", "mcp-http", "chunking-tokenizers"]

[[bin]]
name = "kreuzberg"
path = "src/main.rs"

[dev-dependencies]
ureq = { version = "3.2", features = ["json"] }
tempfile = { workspace = true }
