[package]
name = "kreuzberg-ffi"
version = "5.0.0-rc.1"
edition = "2021"
license = "Elastic-2.0"
description = "High-performance document intelligence library"
readme = false
keywords = ["document", "extraction", "pdf", "ocr", "text"]
categories = ["text-processing"]
repository = "https://github.com/kreuzberg-dev/kreuzberg"

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
default = []

[dependencies]
async-trait = "0.1"
kreuzberg = { path = "../kreuzberg", features = [
  "full",
  "pdf",
  "ocr",
  "paddle-ocr",
  "paddle-ocr-types",
  "layout-detection",
  "layout-types",
  "embeddings",
  "embedding-presets",
  "chunking",
  "keywords-yake",
  "keywords-rake",
  "language-detection",
  "html",
  "tree-sitter",
  "office",
  "email",
  "archives",
  "stopwords",
  "auto-rotate",
  "auto-rotate-types",
  "tokio-runtime",
  "api",
  "mcp",
  "liter-llm",
  "quality",
] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
cbindgen = "0.29"

[dev-dependencies]
tempfile = "3"
